--- a/riverside mapping.Rmd
+++ b/riverside mapping.Rmd
@@ -5,22 +5,6 @@ date: "2023-05-18"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
----
-title: "datacamp_data_import_projections"
-author: "Joyce Nguy"
-date: "2023-05-18"
-output: pdf_document
----
 
 ##Load Packages
 
@@ -29,7 +13,8 @@ library(sp)
 library(rgdal)
 library(tigris)
 ```
-#Load in Census Data 
+#Load in Census Data (all data can be found here: https://ucla.box.com/s/3rms8zmpcgfbnvlndapziiwe3m06zlm4)
+
 ```{r}
 census_2020 <-read_csv("/Users/student1/Downloads/census_2020.csv")
 ```
